Added adnimations (not 100% done) and fixes some stuff, I'll make it neat once done

--- a/html/style.css
+++ b/html/style.css
@@ -1,36 +1,166 @@
-body {
-    background-color: #7F5C38;
-    font-family: 'Instrument Sans', sans-serif;
-    margin: 0;
-    padding: 0;
+@font-face {
+    font-family: 'Instrument Sans';
+    src: url('/fonts/instrument-sans-bold.ttf') format('truetype');
+    font-weight: bold;
 }
 
+/* HTML */
+html {
+    background-image: url('images/bg.png');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+body {
+    font-family: 'Instrument Sans', sans-serif;
+    background: rgba(0, 0, 0, 0);
+    margin: 0;
+    height: auto;
+    padding-top: 100px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    min-height: 100%;
+    position: relative;
+}
+
+/* Top box */
 .top-box {
-    background-color: #5B3A1D;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(62, 43, 28, 0.95);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%; 
     height: 100px;
     padding: 0 20px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    z-index: 10;
 }
 
 .link {
     color: #D9D9D9;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.5em;
     text-decoration: none;
-    white-space: nowrap; 
+    white-space: nowrap;
+    opacity: 1;
 }
 
 .logo-container {
-    flex-grow: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
+    opacity: 1;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+.message {
+    padding: 20px;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* sum.html */
+.section {
+    margin-bottom: 40px;
+    max-height: calc(120vh);
+    position: relative;
+    overflow-y: auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.section h2 {
+    margin-left: 10px;
+    font-weight: bold;
+    font-size: 4em;
+    color: #D9D9D9;
+    background-color: #2277AA;
+    padding: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-left: 0;
+    max-width: 33%;
+}
+
+.scroll-box {
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 10px;
+    background: rgba(62, 43, 28, 0);
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer*/
+}
+
+.scroll-box::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+}
+
+.product {
+    display: inline-block;
+    width: 200px;
+    margin-right: 10px;
+    background: rgba(62, 43, 28, 0.8);
+    border-radius: 15px;
+    overflow: hidden;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+.product img {
+    width: 100%;
+    align-items: center;
+    border-radius: 10px;
+    height: auto;
+}
+
+.product h3 {
+    margin: 10px;
+    font-size: 1em;
+    color: #D9D9D9;
+}
+
+.product p {
+    margin: 0 10px 10px 10px;
+    font-size: 0.9em;
+    color: #D9D9D9;
+}
+
+
+/* Animations */
+.fade-in-sign {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 10%);
+    width: 60vw;
+    opacity: 0;
+    animation: fadeOnly 1s forwards, moveShrink 1s forwards 1s;
+    transform-origin: center center;
+}
+
+@keyframes fadeOnly {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes moveShrink {
+    0% {
+        transform: translate(-50%, 10%) scale(1);
+    }
+    100% {
+        transform: translate(-50%, -150px) scale(0.2);
+    }
 }
